--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: #F3F1FF;
+    font-family: 'Poppins', sans-serif;
 }
 
 main {
@@ -18,17 +19,18 @@ main {
     padding: 30px;
 }
 
-.top-player-title {
+.top-title {
     color: #562EFF;
     font-size: 24px;
     font-weight: 500;
-
+    margin-top: 3px;
 }
 
 .players {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    row-gap: 30px;
+    grid-row-gap: 30px;
+    margin-bottom: 20px;
 }
 
 .player {
@@ -45,4 +47,37 @@ main {
     font-size: 18px;
     font-weight: 500;
     margin-left: 16px;
+}
+hr{
+    border:1px solid #D1D1D1;
+    margin-bottom: 20px;
+}
+/* top  blogs */
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-row-gap: 13px;
+}
+.blog{
+    display: flex;
+}
+.blog-img img{
+    width: 177px;
+    height: 117px;
+}
+.blog-info{
+    margin-left: 16px;
+}
+.blog-info h3{
+    margin-bottom: 6px;
+    font-weight: 500;
+    font-size: 20px;
+}
+.blog-info p{
+    margin-top: 0px;
+    color: #562EFF;
+    font-size: 16px;
+}
+.by{
+color: #9F9F9F;
 }
